# dataShopee

./: pyproject.toml
shopee/export/: convertJsonToCsv.ipynb  items.json  rating.csv
shopee/shopee/: settings.py
shopee/shopee/spiders/: items_spider.py
