[tool.poetry]
name = "shopee"
version = "0.1.0"
description = ""
authors = ["Bui Thu Ha <thuhak22ba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
Scrapy = "^2.6.3"
pandas = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
